--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.2",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-sass": "^2.3.2"
   }
 }
