--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "browser-sync": "^2.18.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^4.0.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-clean-css": "^3.9.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^3.0.0",
+    "pump": "^1.0.2"
   }
 }
